# Kafka

./: CMakeLists.txt  README.md
src/basic/: basicDefine.h  noncopyable.h  singleton.h
src/config/: config.cpp  config.h
src/log/: log.cpp  log.h  logInclude.h
src/utils/: utils.cpp  utils.h
tests/: test.cpp
